# wasmSideModule

./: CMakeLists.txt  README.md
src/exe/: CMakeLists.txt  main.cpp
src/shared/: CMakeLists.txt  TestSharedClass.cpp  TestSharedClass.h
src/wasm/: CMakeLists.txt  mainWasm.cpp
